Prepare first scenario (x5) - First deploy